[package]
name = "term_grid"
description = "Library for formatting strings into a grid layout"

authors = ["uutils developers", "Benjamin Sago <ogham@bsago.me>"]
documentation = "https://docs.rs/uutils_term_grid/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/uutils/uutils-term-grid"
version = "0.2.0"
edition = "2021"
rust-version = "1.56"

[lib]
name = "term_grid"

[dependencies]
unicode-width = "0.1.11"
