[package]
name = "uutils_term_grid"
description = "Library for formatting strings into a grid layout. Fork of term_grid."

authors = ["uutils developers", "Benjamin Sago <ogham@bsago.me>"]
documentation = "https://docs.rs/uutils_term_grid/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/uutils/uutils-term-grid"
version = "0.8.0"
edition = "2021"
rust-version = "1.70"
keywords = ["terminal", "grid", "layout", "format", "display"]
categories = ["command-line-interface", "text-processing"]

[lib]
name = "term_grid"

[dependencies]
ansi-width = "0.1.0"

[dev-dependencies]
divan = { version = "4.3.0", package = "codspeed-divan-compat" }

[[bench]]
name = "bench_grid"
path = "benches/bench-grid.rs"
harness = false
